// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailAdressenVerblijfsobjectGebruiksdoelenItem should render exactly five gebruiksdoelen 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      Gebruiksdoel
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        Description 1
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        Description 2
        <span>
          :
          Description 2 Plus
        </span>
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="03"
      >
        Description 3
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="04"
      >
        Description 4
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="05"
      >
        Description 5
        <span>
          :
          Description 5 Plus
        </span>
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailAdressenVerblijfsobjectGebruiksdoelenItem should render no gebruiksdoelen 1`] = `""`;

exports[`MapDetailAdressenVerblijfsobjectGebruiksdoelenItem should render no more than five gebruiksdoelen 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      Gebruiksdoel
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        Description 1
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        Description 2
        <span>
          :
          Description 2 Plus
        </span>
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="03"
      >
        Description 3
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="04"
      >
        Description 4
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="05"
      >
        Description 5
        <span>
          :
          Description 5 Plus
        </span>
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailAdressenVerblijfsobjectGebruiksdoelenItem should render one gebruiksdoel 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      Gebruiksdoel
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        Description 1
      </li>
    </ul>
  </section>
</div>
`;

exports[`MapDetailAdressenVerblijfsobjectGebruiksdoelenItem should render two gebruiksdoelen 1`] = `
<div
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      Gebruiksdoel
    </div>
    <ul
      className="map-detail-result__item-value map-detail-result__item-list"
    >
      <li
        className="map-detail-result__item-list-item"
        key="01"
      >
        Description 1
        <span>
          :
          Description 1 Plus
        </span>
      </li>
      <li
        className="map-detail-result__item-list-item"
        key="02"
      >
        Description 2
      </li>
    </ul>
  </section>
</div>
`;
